<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dashcam AA</string>
    <string name="play">Record</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="loop">Loop</string>
    <string name="camera">Camera</string>
    <string name="camera_rear">Rear camera</string>
    <string name="camera_front">Front camera</string>
    <string name="status">Status</string>
    <string name="disconnected">Dashcam is not connected. Open the Dashcam app on the phone first.</string>
    <string name="retry">Retry</string>
    <string name="connected">Connected</string>
    <string name="car_title">Dashcam</string>
    <string name="status_not_connected">Not connected</string>
    <string name="status_camera_off">Camera off</string>
    <string name="status_all_good">All good</string>
    <string name="open_dashcam">Open Dashcam</string>
    <string name="waiting_camera">Waiting for camera</string>
    <string name="timer_zero">00:00</string>
</resources>
